chore: voice config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 version: '3.8'
 
 services:
-  gpt4o:
+  chat:
     build: .
+    command: python chat.py
     ports:
       - "7860:7860"
+    volumes:
+      - .:/usr/src/app
+    environment:
+      - PYTHONUNBUFFERED=1
+
+  voice:
+    build: .
+    command: python voice.py
+    ports:
+      - "7861:7860"
     volumes:
       - .:/usr/src/app
     environment:
